// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner bounce displays a spinner-bounce class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "display: none;",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner circular displays a spinner-circular class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "display: none;",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-circular"
  >
    <div
      className="sc-inner"
    >
      <div
        className="sc-inner-animation"
      >
        <svg
          height="20"
          strokeWidth="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
          width="20"
        >
          <path
            className="sc-inner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            className="sc-inner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            strokeDasharray="280 280"
            strokeDashoffset="210"
          />
        </svg>
      </div>
    </div>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner displays an is-hidden class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "display: none;",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner dots displays a spinner-dots class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "display: none;",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-dots"
  >
    <span>
      <span
        className="dot1"
      />
      <span
        className="dot2"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner has an className 1`] = `
<.sc-bdVaJa
  className="testing"
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "display: flex;",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner has custom background color 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "display: flex;",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#3C97D3",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#3C97D3",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#3C97D3",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner with fixed position has a loading class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "display: flex;",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: fixed;
      z-index: 4000;
    ",
      "
    ",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner with inline position has a loading class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "display: flex;",
      "
    ",
      "display: inline-flex;",
      "
    ",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;

exports[`Spinner with loading true has a loading class 1`] = `
<.sc-bdVaJa
  className=""
  css={
    Array [
      "
    background-color: ",
      "#fff",
      ";
    display: none;
    ",
      "display: flex;",
      "
    ",
      "
      
  align-items: center;
  bottom: 0;
  justify-content: center;
  left: 0;
  right: 0;
  top: 0;

      position: absolute;
      z-index: 1000;
    ",
      "
    ",
      "

    .spinner-dots {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-cZxgpV",
        "inject": [Function],
        "name": "cZxgpV",
        "rules": Array [
          "@-webkit-keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
          "@keyframes cZxgpV{100%{-webkit-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite linear;
      height: ",
      "40",
      "px;
      position: relative;
      width: ",
      "40",
      "px;
    }

    .spinner-dots .dot1, .dot2 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-iQfAUB",
        "inject": [Function],
        "name": "iQfAUB",
        "rules": Array [
          "@-webkit-keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes iQfAUB{0%,100%{-webkit-transform:scale(0.0);-ms-transform:scale(0.0);transform:scale(0.0);}50%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 2.0s infinite ease-in-out;
      border-radius: 100%;
      display: inline-block;
      height: 60%;
      position: absolute;
      top: 0;
      width: 60%;
    }

    .spinner-dots .dot1 {
      background-color: ",
      "#3C97D3",
      ";
      height: 60%;
      top: 0;
    }

    .spinner-dots .dot2 {
      animation-delay: -1.0s;
      background-color: ",
      "#E54C3B",
      ";
      bottom: 0;
      height: 60%;
      top: auto;
    }

    .spinner-bounce .bounce1, .bounce2, .bounce3 {
      animation: ",
      Keyframes {
        "id": "sc-keyframes-ghjfcd",
        "inject": [Function],
        "name": "ghjfcd",
        "rules": Array [
          "@-webkit-keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
          "@keyframes ghjfcd{0%,80%,100%{-webkit-transform:scale(0);-ms-transform:scale(0);transform:scale(0);}40%{-webkit-transform:scale(1.0);-ms-transform:scale(1.0);transform:scale(1.0);}}",
        ],
        "toString": [Function],
      },
      " 1.4s infinite ease-in-out both;
      background-color: ",
      "#9198A0",
      ";
      border-radius: 100%;
      display: inline-block;
      height: ",
      "12",
      "px;
      margin-right: 3px;
      width: ",
      "12",
      "px;
    }

    .spinner-bounce .bounce1 {
      animation-delay: -0.32s;
    }

    .spinner-bounce .bounce2 {
      animation-delay: -0.16s;
    }

    .spinner-bounce .bounce3 {
      margin-right: 0;
    }

    .spinner-circular {
      display: inline-block;
      position: relative;
      width: ",
      "16",
      "px;
      height: ",
      "16",
      "px;
    }

    .spinner-circular .sc-inner {
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
      vertical-align: middle;
    }

    .spinner-circular .sc-inner-animation {
        animation: ",
      Keyframes {
        "id": "sc-keyframes-gWPqvk",
        "inject": [Function],
        "name": "gWPqvk",
        "rules": Array [
          "@-webkit-keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
          "@keyframes gWPqvk{0%{-webkit-transform:rotate(0deg);-ms-transform:rotate(0deg);transform:rotate(0deg);}to{-webkit-transform:rotate(1turn);-ms-transform:rotate(1turn);transform:rotate(1turn);}}",
        ],
        "toString": [Function],
      },
      " .5s linear infinite;
    }

    .spinner-circular .sc-inner svg {
        display: block;
    }

    .spinner-circular .sc-inner path {
        fill-opacity: 0;
    }

    .spinner-circular .sc-inner-head {
        transform-origin: center;
        transition: stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9);
        stroke: ",
      "#9198A0",
      ";
        stroke-linecap: round;
    }

    .spinner-circular .sc-inner-track {
        stroke: rgba(92, 112, 128, .2);
    }
  ",
    ]
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</.sc-bdVaJa>
`;
